<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            style="@style/LinearLayoutMain">

            <TextView
                style="@style/TextDescriptionAboutApp"
                android:text="@string/lbl_description_app" />

            <TextView
                style="@style/TextDescriptionAboutApp"
                android:text="@string/lbl_description_courses" />
            
            <!-- Specific layout to HTML resume -->
            <LinearLayout
                style="@style/LinearLayoutSecondAboutApp">
                
                <ImageView
                    style="@style/ImgAboutApp"
                    android:src="@drawable/img_html54" />
                
                <LinearLayout
                    style="@style/LinearLayoutThirdAboutApp" >
                    
                    <TextView
                        android:text="@string/lbl_description_html"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"/>
                    
                    <Button
                        style="@style/ButtonsLearnAboutApp" />

                </LinearLayout>
            </LinearLayout>


            <!-- Specific layout to CSS resume -->
            <LinearLayout
                style="@style/LinearLayoutSecondAboutApp">

                <ImageView
                    style="@style/ImgAboutApp"
                    android:src="@drawable/img_css32" />

                <LinearLayout
                    style="@style/LinearLayoutThirdAboutApp" >
                    
                    <TextView
                        android:text="@string/lbl_description_css"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        style="@style/ButtonsLearnAboutApp" />

                </LinearLayout>
            </LinearLayout>

            <!-- Specific layout to BOOTSTRAP resume -->
            <LinearLayout
                style="@style/LinearLayoutSecondAboutApp">

                <ImageView
                    style="@style/ImgAboutApp"
                    android:src="@drawable/img_bootstrap" />

                <LinearLayout
                    style="@style/LinearLayoutThirdAboutApp" >

                    <TextView
                        android:text="@string/lbl_description_css"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        style="@style/ButtonsLearnAboutApp" />

                </LinearLayout>
            </LinearLayout>

            <!-- Specific layout to JAVASCRIPT resume -->
            <LinearLayout
                style="@style/LinearLayoutSecondAboutApp">

                <ImageView
                    style="@style/ImgAboutApp"
                    android:src="@drawable/img_js7" />

                <LinearLayout
                    style="@style/LinearLayoutThirdAboutApp" >

                    <TextView
                        android:text="@string/lbl_description_css"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        style="@style/ButtonsLearnAboutApp" />

                </LinearLayout>
            </LinearLayout>

            <!-- Specific layout to JQUERY resume -->
            <LinearLayout
                style="@style/LinearLayoutSecondAboutApp">

                <ImageView
                    style="@style/ImgAboutApp"
                    android:src="@drawable/img_jquery2" />

                <LinearLayout
                     style="@style/LinearLayoutThirdAboutApp">

                    <TextView
                        android:text="@string/lbl_description_css"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        style="@style/ButtonsLearnAboutApp" />

                </LinearLayout>
            </LinearLayout>
            
            
        </LinearLayout>

    </ScrollView>

</LinearLayout>
